--- a/main.css
+++ b/main.css
@@ -108,13 +108,13 @@
     margin-bottom: 10px;
 }
 .character[data-character="chicken"] {
-    background-image: url("/assets/player.png");
+    background-image: url("assets/player.png");
 }
 .character[data-character="reverse-chicken"] {
-    background-image: url("/assets/reverse-player.png");
+    background-image: url("assets/reverse-player.png");
 }
 .character[data-character="bomb"] {
-    background-image: url("/assets/bomb.png");
+    background-image: url("assets/bomb.png");
 }
 
 .character.selected {
